variables name y monto

--- a/mail_credito-social.html
+++ b/mail_credito-social.html
@@ -48,12 +48,16 @@
         <table width="400" border="0" cellspacing="5" align="center" style="text-align:center; color:#00539b;">
   <tbody>
 
+  	<tr>
+		<td style="font-size:20px; font-family: 'Open Sans', sans-serif;"><strong>Estimado(a):</strong> %%NOMBRE%%</td>
+    </tr>
     <tr>
       <td style="font-size:15px; font-family: 'Open Sans', sans-serif; color: #000000; text-transform: uppercase;">Tienes un monto <span style="font-weight: 800"> pre aprobado<sup>(2)</sup> por:</span> </td>
     </tr>
     <tr>
-      <td style="font-size:64px; font-weight:800; font-family: 'Open Sans', sans-serif; color: #000000;">$ 2.000.000</td>
-    </tr>
+      <td style="font-size:34px; font-weight:700; font-family: 'Open Sans', sans-serif;"> <strong>$</strong> 	%%MONTO_PRE%%
+      </td>
+	</tr>
   </tbody>
 </table>
         	
