deploy para cliente

--- a/mail_hapylandl.html
+++ b/mail_hapylandl.html
@@ -17,6 +17,11 @@
 		text-align:justify;
 		color: #00539b; 
 	}
+	li.current {
+		font-size:11px; 
+		text-align:justify;
+		color: #00539b; 
+	}
 </style>
 </head>
 <body bgcolor="#eee" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
@@ -33,13 +38,11 @@
 			<img src="images/top-mail.png" width="650" height="434" alt=""></td>
 	</tr>
 
-
-	<tr>
-		<td width="650" height="79" style="text-align:center; background-color: #00539b; font-size:18px; color:#ffffff; font-family: 'Open Sans', sans-serif;">
-			Lo bueno de estar juntos es que a la hora de ordenar<br>
- tu presupuesto, estamos ahí para <span style="font-weight: 700">asesorar y ayudarte.</span>
-        </td>
+	<tr style="background-color: white;">
+		<td>
+			<img src="images/logo.png" width="650" height="173" alt="" style=" margin: auto;"></td>
 	</tr>
+	
  	<tr>
 		<td height="20"></td>
 	</tr>
@@ -47,15 +50,23 @@
 		<td width="650" height="auto">
         <table width="400" border="0" cellspacing="5" align="center" style="text-align:center; color:#00539b;">
   <tbody>
-
+	<tr>
+		<td style="font-size:18px; font-family: 'Open Sans', sans-serif;">Rut: %%RUT%%</td>
+    </tr>
   	<tr>
-		<td style="font-size:20px; font-family: 'Open Sans', sans-serif;"><strong>Estimado(a):</strong> %%NOMBRE%%</td>
+		<td style="font-size:18px; font-family: 'Open Sans', sans-serif;">No olvides que tienes plazo</td>
     </tr>
     <tr>
-      <td style="font-size:15px; font-family: 'Open Sans', sans-serif; color: #000000; text-transform: uppercase;">Tienes un monto <span style="font-weight: 800"> pre aprobado<sup>(2)</sup> por:</span> </td>
+		<td style="font-size:18px; font-family: 'Open Sans', sans-serif;"><strong>hasta el 31 de octubre</strong> para cobrar gratis</td>
+    </tr>
+  	<tr>
+		<td style="font-size:18px; font-family: 'Open Sans', sans-serif;">tu tarjeta Happyland con <strong>$10.000 de recarga.</strong></td>
     </tr>
     <tr>
-      <td style="font-size:34px; font-weight:700; font-family: 'Open Sans', sans-serif;"> <strong>$</strong> 	%%MONTO_PRE%%
+      <td style="font-size:18px; font-family: 'Open Sans', sans-serif;">Solo debes ir a Happyland más cercano</td>
+    </tr>
+    <tr>
+      <td style="font-size:18px; font-family: 'Open Sans', sans-serif;"> con este código <strong>%%CODIGO%%</strong> 	
       </td>
 	</tr>
   </tbody>
@@ -64,34 +75,22 @@
         </td>
 	</tr>
 	
-	<tr style="background-color: #D9E1EC;">
-		<td>
-			<img src="images/características.png" width="650" height="434" alt="" style=" margin: auto;"></td>
-	</tr>
 	<tr>
 		<td height="20"></td>
 	</tr>
-	<tr>
-		<td width="650" height="79" style="text-align:center;  font-size:24px;  font-family: 'Open Sans', sans-serif; color: #00539b">
-			Solicítanos tu <span style="text-transform: uppercase; font-size: 24px;font-weight: 800;">crédito social</span> <br>
- y ajusta tus deudas a cómodas cuotas.</span>
-        </td>
-
-	</tr>
-	<tr>
-		<td colspan="2" width="650" height="74" style="padding:10px 30px; text-align:left;">
-			<ol>
-				<li>
-				Crédito exclusivo para Trabajadores Afiliados de la C.C.A.F. La Araucana. 
-				</li>
-				<li>
-					Montos sujetos a evaluación y aprobación crediticia conforme a los antecedentes y políticas de <br> Crédito de La Caja y la normativa vigente. Oferta vigente del 03 al 30 de octubre de 2017, ambas fechas inclusive.<br>
-			Las Cajas de Compensación son fiscalizadas por la Superintendencia de Seguridad Social <a href="http://www.suseso.cl" target="_blank">(www.suseso.cl)</a>.
-				</li>
-			</ol>
+	
+	<tr>	
 		
-        </td>
+		<td colspan="2" width="950" height="83" style="padding:20px 60px;text-align:left;">
+		  <li >No acumulables con otra promociones, convenios y/o descuentos.</li>
+     	  <li >
+		  Beneficio exclusivo para trabajadores y pensionados afiliados a La Araucana.</li>
+		  <li >Las Cajas de Compensación son fiscalizadas por la Superintendencia de Seguridad Social <a href="http://www.suseso.cl" target="_blank">(www.suseso.cl)</a></li>
+		</ul>
+        </td> 
 	</tr>
+
+
 <!-- 	<tr>
         <td colspan="1" align="center" style="background-color:#FFF; font-size:9px; color:#333333; padding:5px;">Este correo fue enviado a %%emailaddress%% <br>
     		Si no quieres recibir más estos correos, haz clic <a style="color: #333;" href="%%unsubscribelink%%">aquí</a>
