--- a/mail_hapylandl1.html
+++ b/mail_hapylandl1.html
@@ -4,62 +4,71 @@
 <title>Crédito Social - La Araucana</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
-<style>
-	body {
-		font-family: 'Open Sans', sans-serif;
-	}
-	img {
-		display:block;
-		border:none;
-	}
-</style>
+
 </head>
-<body bgcolor="#eee" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<body bgcolor="#eee" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="font-family: 'Open Sans', sans-serif;">
 <table id="Tabla_01" width="650" height="auto" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff">
 	<tr>
 		<td>
-			<img src="http://laaraucana.cl/medios/2017/09/creditosocial/trabajador/mail/images/top-mail.jpg" width="650" height="375" alt=""></td>
+			<img src="http://104.236.159.38/octuberHappyland/images/top-mail.png" width="650" height="434" alt="" style="display:block;
+		border:none;"></td>
 	</tr>
-	<tr>
+
+	<tr style="background-color: white;">
+		<td>
+			<img src="http://104.236.159.38/octuberHappyland/images/logo.png" width="650" height="173" alt="" style=" margin: auto; display:block;
+		border:none;"></td>
+	</tr>
+	
+ 	<tr>
 		<td height="20"></td>
 	</tr>
 	<tr>
 		<td width="650" height="auto">
         <table width="400" border="0" cellspacing="5" align="center" style="text-align:center; color:#00539b;">
   <tbody>
-    <tr>
-      <td style="font-size:20px; font-family: 'Open Sans', sans-serif;">ESTIMADO(A): NOMBRE APELLIDO</td>
+  	<tr>
+		<td style="font-size:18px; font-family: 'Open Sans', sans-serif;">Lo bueno de estar juntos es que puedes </td>
+    </tr>
+  	<tr>
+		<td style="font-size:18px; font-family: 'Open Sans', sans-serif;">disfrutar de todos nuestros beneficios, </td>
     </tr>
     <tr>
-      <td style="font-size:15px; font-family: 'Open Sans', sans-serif; color: #000000;">Tienes un monto pre aprobado<sup>(1)</sup> por:</td>
+      <td style="font-size:18px; font-family: 'Open Sans', sans-serif;">por ello, queremos recordarte que tienes  </td>
     </tr>
     <tr>
-      <td style="font-size:38px; font-weight:700; font-family: 'Open Sans', sans-serif; color: #000000;">$ X.XXX.XXX</td>
+      <td style="font-size:18px; font-family: 'Open Sans', sans-serif;">plazo hasta el 31 de octubre para cobrar  </td>
+    </tr>
+    <tr>
+      <td style="font-size:18px; font-family: 'Open Sans', sans-serif;">gratis tu tarjeta Happyland con $10.000  de </td>
+    </tr>
+    <tr>
+      <td style="font-size:18px; font-family: 'Open Sans', sans-serif;">recarga. Solo debes ir al Happyland más </td>
+    </tr>
+    <tr>
+      <td style="font-size:18px; font-family: 'Open Sans', sans-serif;">cercano y presentar tu código</td>
     </tr>
   </tbody>
 </table>
         	
         </td>
 	</tr>
+	
 	<tr>
 		<td height="20"></td>
 	</tr>
-	<tr>
-		<td width="650" height="79" style="text-align:center; background-color: #00539b; font-size:18px; color:#ffffff; font-family: 'Open Sans', sans-serif;">
-			No esperes más y solicita tu evaluación con tu ejecutivo,<br>
- llámanos al 600 42 28 100 o al *8100 desde celulares.
-        </td>
-	</tr>
-	<tr>
-		<td>
-			<img src="http://laaraucana.cl/medios/2017/09/creditosocial/trabajador/mail/images/caracteristicas.jpg" width="650" height="284" alt=""></td>
-	</tr>
-	<tr>
-		<td width="650" height="74" style="color:#00539b; font-size:10px; text-align:justify; padding:10px 30px; font-family: 'Open Sans', sans-serif;">
-        	1.- Montos sujetos a evaluación y aprobación crediticia conforme a los antecedentes y políticas de Crédito de La Caja y la normativa vigente. Oferta vigente del 4 al 29 de septiembre de 2017, ambas fechas inclusive.<br>
-        	2.- Crédito exclusivo para trabajadores afiliados de la C.C.A.F. La Araucana.<br>
-Las Cajas de Compensación son fiscalizadas por la Superintendencia de Seguridad Social <a href="http://www.suseso.cl" target="_blank">(www.suseso.cl)</a>.
-        </td>
+	
+	<tr>	
+		
+		<td colspan="2" width="950" height="83" style="padding:20px 60px;text-align:left;">
+		  <li style="font-size:11px; text-align:justify; color: #00539b; ">
+			No acumulables con otra promociones, convenios y/o descuentos.</li>  
+     	 <li style="font-size:11px; text-align:justify; color: #00539b; ">
+		  	Beneficio exclusivo para trabajadores y pensionados afiliados a La Araucana.</li>
+		 <li style="font-size:11px; text-align:justify; color: #00539b; ">
+		  Las Cajas de Compensación son fiscalizadas por la Superintendencia de Seguridad Social <a href="http://www.suseso.cl" target="_blank">(www.suseso.cl)</a></li>
+		</ul>
+        </td> 
 	</tr>
 </table>
 </body>
