--- a/mail_hapylandl.html
+++ b/mail_hapylandl.html
@@ -8,16 +8,22 @@
 </head>
 <body bgcolor="#eee" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="font-family: 'Open Sans', sans-serif;">
 <table id="Tabla_01" width="650" height="auto" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff">
-	
+	<tr>
+    	<td colspan="1" align="center" style="background-color:#FFF; font-size:9px; color:#333333; padding:5px; font-family: 'Open Sans', sans-serif;"><span class="MsoNormal" style="text-align:center">Para asegurar la entrega de nuestros e-mail en su correo, por favor agregue <br>
+            <a href="mailto:info@laaraucana.cl">info@laaraucana.cl</a> a su libreta de direcciones de correo.<br/>
+			Si no puede ver correctamente este correo, haga clic <a href="http://104.236.159.38/octuberHappyland/mail_hapylandl1.html">aquí</a>
+			</span>
+    	</td>
+	</tr> 
 	<tr>
 		<td>
-			<img src="images/top-mail.png" width="650" height="434" alt="" style="display:block;
+			<img src="http://104.236.159.38/octuberHappyland/images/top-mail.png" width="650" height="434" alt="" style="display:block;
 		border:none;"></td>
 	</tr>
 
 	<tr style="background-color: white;">
 		<td>
-			<img src="images/logo.png" width="650" height="173" alt="" style=" margin: auto; display:block;
+			<img src="http://104.236.159.38/octuberHappyland/images/logo.png" width="650" height="173" alt="" style=" margin: auto; display:block;
 		border:none;"></td>
 	</tr>
 	
@@ -28,6 +34,11 @@
 		<td width="650" height="auto">
         <table width="400" border="0" cellspacing="5" align="center" style="text-align:center; color:#00539b;">
   <tbody>
+
+	<tr>
+		<td style="font-size:18px; font-family: 'Open Sans', sans-serif;">Rut: <strong>%%RUT %%</strong> </td>
+    </tr>
+
   	<tr>
 		<td style="font-size:18px; font-family: 'Open Sans', sans-serif;">Lo bueno de estar juntos es que puedes </td>
     </tr>
@@ -49,6 +60,10 @@
     <tr>
       <td style="font-size:18px; font-family: 'Open Sans', sans-serif;">cercano y presentar tu código</td>
     </tr>
+    <tr>
+		<td style="font-size:18px; font-family: 'Open Sans', sans-serif;"> <strong>%%CODIGO %%</strong> </td>
+    </tr>
+
   </tbody>
 </table>
         	
@@ -71,7 +86,11 @@
 		</ul>
         </td> 
 	</tr>
-
+	<tr>
+        <td colspan="1" align="center" style="background-color:#FFF; font-size:9px; color:#333333; padding:5px;">Este correo fue enviado a %%emailaddress%% <br>
+    		Si no quieres recibir más estos correos, haz clic <a style="color: #333;" href="%%unsubscribelink%%">aquí</a>
+        </td>
+	</tr> 
 </table>
 </body>
 </html>
