Cambio Title error

--- a/mail_hapylandl1.html
+++ b/mail_hapylandl1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Tarjeta Happyland/title>
+<title>Tarjeta Happyland</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
